|
Quick Lists
|
|
Bug ID:
|
6825342
|
|
Votes
|
0
|
|
Synopsis
|
Security warning may change Z-order of top-level
|
|
Category
|
java:classes_awt
|
|
Reported Against
|
|
|
Release Fixed
|
7(b57)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
6770457
|
|
Submit Date
|
02-APR-2009
|
|
Description
|
Please use the testcase attached to the CR 6770457 to reproduce the problem
The steps to reproduce the bug are
- there are two windows: the browser window and the"W2" dialog
- the browser window is on the top and the "W2" dialog is behind the browser window
- the browser window partially covers the "W2" dialog so that the user can highlight tooltip for button on the "W2" dialog / *button*
- The user moves the mouse continuously and quickly between the two windows - highlighting a tooltip in each window as they rotate.
- After many iterations (even 20-30) the W2 window will appear in front of the browser window but the title Bar of the W2 window
will remain inactive (grey) - the browser window goes to back but still has active window title bar.
The problem is easily reproducible on Windows 2K, latest 6u14 build
Posted Date : 2009-04-02 09:26:34.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
Need to use SWP_NOOWNERZORDER flag for warning windows.
Posted Date : 2009-04-02 09:26:34.0
This is a timing issue between the heavyweight tooltips and the security warning. It seems that on Windows 2000 the tooltip window may appear either above or below the security warning icon. Depending on the case the bug is sometimes reproduced. Looks like on Windows XP and higher the window always gets inserted in the correct position in the z-order, thus not causing the SetWindowPos invoked on the security warning to perform any actions.
Posted Date : 2009-04-07 12:19:15.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |