6825342: Security warning may change Z-order of top-level

Added the SWP_NOOWNERZORDER flag when calling ::SetWindowPos()

Reviewed-by: art, dcherepanov